[tool.poetry]
name = "default_app"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
gunicorn = "^20.1.0"
setuptools = "^68.0.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.27.0"

[tool.poetry.group.linters.dependencies]
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
